# CGLabs

./: .gitignore  decorators.py  index.js  lab-1.py  lab-2.py  lab-3.py  lab-4.py  lab-5-2.py  lab-5.py  lab-6-2.py  models.py  package-lock.json  package.json  requirements.txt  roberts-copy.py
Noise/: CMakeLists.txt  main.cpp  noise.frag
RayMarching/: CMakeLists.txt  libs.bash  objects.cpp  raymarching.cpp  raymarching.py
RayTracing/: CMakeLists.txt  main.cpp
SpinningObject/: CMakeLists.txt  libs.bash  main.cpp  sphere.txt  torus.cpp
